--- a/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
+++ b/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
@@ -5,9 +5,7 @@
 {% block style %}
 <link rel="stylesheet" href="{{ STATIC_URL }}style/main.css">
 <link rel="stylesheet" href="{{ STATIC_URL }}style/profile.css">
-<style typ="text/css">
 
-</style>
 {% endblock %}
 
 
@@ -19,15 +17,16 @@
 
 {% block container %}
 <div class="container-fluid">
-<nav class="navbar navbar-default navbar-fixed-top">
-	<div class="row" >
+<nav class="navbar navbar-default navbar-fixed-top row">
+	<div class="col-xs-2" >
+	  <a href="{% if origin_url %}{{ origin_url }}{% else %}javascript:history.back();{% endif %}" class="glyphicon glyphicon-menu-left" target="_self"></a>
+	</div>
 	<div class="col-xs-8" >
-	  <a href="{% if origin_url %}{{ origin_url }}{% else %}#{% endif %}" class="glyphicon glyphicon-menu-left" target="_self">返回</a>
+	  <span class="h3">申请售后</span>
 	</div>
-	<div class="col-xs-4" >
-	  <a id="address_plus_link" href="javascript:void(0);" class="add" >申请售后</a>
+	<div class="col-xs-2" >
+	  <a id="address_plus_link" href="{% url sale_home %}" class="glyphicon glyphicon-home" ></a>
 	</div>
-    </div>
 </nav>
 
 <div class="list-panel panel-default panel-first-child">
@@ -55,13 +54,13 @@
 </div>
 
 <div id="refund-status" class="list-panel panel-default" style="display:none;">
-  <div class="panel-heading">售后申请状态</div>
+  <div class="panel-heading">售后订单申请状态</div>
   <div class="panel-body">
 	<div id="refund-resp" class="row list-row list-row-border">
 	  <div class="well well-lg">
 		<p>亲，您的售后申请已提交成功了！</p>
 		<p>客服将在 <span class="glyphicon glyphicon-time label label-danger">退款申请后两天内</span>处理您的退货/退款申请，请耐心等待！</p>
-		<p><a href="javascript:history.back();" class="btn btn-default btn-rowfull">返回订单详情</a></p>
+		<p><a href="{% url user_orderdetail pk=order.sale_trade %}" class="btn btn-default btn-rowfull">返回订单详情</a></p>
 	  </div>
 	</div>
   </div>
