--- a/shopmanager/flashsale/pay/templates/pay/maddresslist.html
+++ b/shopmanager/flashsale/pay/templates/pay/maddresslist.html
@@ -48,7 +48,7 @@
 	  <span class="h3">地址列表</span>
 	</div>
 	<div class="col-xs-2" >
-	  <a id="address_plus_link" href="javascript:void(0);" class="glyphicon glyphicon-collapse-down " ></a>
+	  <a id="address_plus_link" href="javascript:void(0);" class="glyphicon glyphicon-collapse-down " target="_self"></a>
 	</div>
 </nav>
 
@@ -131,7 +131,6 @@ $(function(){
     }); 
 	
 });
-
 
 </script>
 {% endblock %}
