--- a/shopmanager/flashsale/pay/templates/pay/mindex.html
+++ b/shopmanager/flashsale/pay/templates/pay/mindex.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="{{ STATIC_URL }}style/style_other.css">
   <link rel="stylesheet" href="{{ STATIC_URL }}style/animation.css">
 
-  <title>小鹿美美-外卖原单正品热卖</title>
+  <title>小鹿美美-外贸原单正品热卖</title>
 </head>
 <body>
 
