--- a/shopmanager/flashsale/pay/templates/pay/morderlist.html
+++ b/shopmanager/flashsale/pay/templates/pay/morderlist.html
@@ -84,7 +84,7 @@ body{
 	  <span class="h3">订单列表</span>
 	</div>
 	<div class="col-xs-2" >
-	  <a id="address_plus_link" href="{% url sale_home %}" class="glyphicon glyphicon-home" ></a>
+	  <a id="address_plus_link" href="{% url sale_home %}" class="glyphicon glyphicon-home" target="_self"></a>
 	</div>
 </nav>
 
