--- a/shopmanager/flashsale/pay/templates/pay/mrefundconfirm.html
+++ b/shopmanager/flashsale/pay/templates/pay/mrefundconfirm.html
@@ -25,7 +25,7 @@
 	  <span class="h3">售后订单状态</span>
 	</div>
 	<div class="col-xs-2" >
-	  <a id="address_plus_link" href="{% url sale_home %}" class="glyphicon glyphicon-home" ></a>
+	  <a id="address_plus_link" href="{% url sale_home %}" class="glyphicon glyphicon-home" target="_self"></a>
 	</div>
 </nav>
 
