--- a/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
+++ b/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
@@ -25,7 +25,7 @@
 	  <span class="h3">申请售后</span>
 	</div>
 	<div class="col-xs-2" >
-	  <a id="address_plus_link" href="{% url sale_home %}" class="glyphicon glyphicon-home" ></a>
+	  <a id="address_plus_link" href="{% url sale_home %}" class="glyphicon glyphicon-home" target="_self"></a>
 	</div>
 </nav>
 
@@ -83,15 +83,15 @@
     	 {% csrf_token %}
     	 <input type="hidden" name="trade_id" value="{{ order.sale_trade }}" >
     	  <input type="hidden" name="order_id" value="{{ order.id }}" >
-    	  <div class="form-group form-group-sm">
+    	  <div class="form-group ">
 		    <label for="inputNum32" class="control-label">是否收货：</label>
 		    <select id="selectReason31" name="good_receive" required="required" class="form-control">
-		      <option value="">提示：亲，退货退款请选择我要退货哦</option>
+		      <option value="">提示：收货后退货退款请选择我要退货哦</option>
 			  <option value="Y">是</option>
 			  <option value="N">否</option>
 			</select>
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <label for="selectReason31" class="control-label">退款原因：</label>
 		    <select id="selectReason31" name="reason" required="required" class="form-control">
 			  <option value="">请选择退款理由</option>
@@ -101,15 +101,16 @@
 			  <option value="5">5</option>
 			</select>
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <label for="inputRefund31" class="control-label">退款金额：</label>
-		    <input type="number" name="refund_fee" max="{{ order.payment }}" min="0" step = "any" required = "required" class="form-control " id="inputRefund31" value="0">
+		    <input type="number" name="refund_fee" max="{{ order.payment }}" min="0" step = "any" 
+		    	required = "required" class="form-control " id="inputRefund31" value="{{ order.payment }}">
 		  </div>
 		  <div class="form-group ">
 		    <label for="textDesc31" class="control-label">补充描述：</label>
 		    <textarea id="textDesc31" name="desc" class="form-control" rows="3" placeholder="补充详细描述能帮助售后快速处理你的退款退货申请"></textarea>
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <button type="submit" class="btn btn-default btn-rowfull" >提交退款申请</button>
 		  </div>
 		</form>
@@ -122,10 +123,10 @@
     	  <input type="hidden" name="return_good" value="1" >
     	  <input type="hidden" name="trade_id" value="{{ order.sale_trade }}" >
     	  <input type="hidden" name="order_id" value="{{ order.id }}" >
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <label for="selectReason32" class="control-label">退货原因：</label>
 		      <select id="selectReason32" name="reason" required = "required" class="form-control">
-		      	  <option value="">提示：亲，请确保商品包装完好再退货</option>
+		      	  <option value="">提示：请确保商品包装完好再申请退货</option>
 				  <option value="1">1</option>
 				  <option value="2">2</option>
 				  <option value="3">3</option>
@@ -133,19 +134,19 @@
 				  <option value="5">5</option>
 			  </select>
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <label for="inputNum32" class="control-label">退货数量：</label>
 		    <input type="number" name="refund_num" max="{{ order.num }}" min="1"  required = "required" class="form-control " id="inputNum32" value="{{ order.num }}" {% if order.num == 1 %}readonly{% endif %}>
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <label for="inputRefund32" class="control-label">退款金额：</label>
 		    <input type="number" name="refund_fee" max="{{ order.payment }}" min="0" step = "any" required = "required" class="form-control " id="inputRefund32" value="{{ order.payment }}">
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <label for="inputCompany32" class="control-label">退货快递：</label>
 		    <input type="text" name="company_name" maxlength="20" required = "required" class="form-control " id="inputCompany32" placeholder="请输入退货快递...">
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		    <label for="inputSid32" class="control-label">退回单号：</label>
 		    <input type="text" name="sid" maxlength="20" pattern="[A-z0-9]{8,20}" required = "required" class="form-control " id="inputSid32" placeholder="请输入退货快递单号...">
 		  </div>
@@ -153,7 +154,7 @@
 		    <label for="textDesc32" class="control-label">补充描述：</label>
 		    <textarea name="desc" class="form-control" rows="3" cols="200" id="textDesc32" placeholder="补充详细描述能帮助售后快速处理你的退款退货申请"></textarea>
 		  </div>
-		  <div class="form-group form-group-sm">
+		  <div class="form-group ">
 		      <button type="submit" class="btn btn-default btn-rowfull">提交退货申请</button>
 		  </div>
 		</form>
