--- a/shopmanager/flashsale/xiaolumm/templates/remind.html
+++ b/shopmanager/flashsale/xiaolumm/templates/remind.html
@@ -32,7 +32,7 @@
 	    </span>
 	  </div>
 	  <div id="id-continue" style="text-align:center;display:none">
-	    <a href="/m/" type="btn btn-warning">点击继续 >></a>
+	    <a href="/m/" type="button" class="btn btn-warning">点击继续 >></a>
 	  </div>
 	</div>
       </div>
