--- a/shopmanager/flashsale/xiaolumm/templates/remind.html
+++ b/shopmanager/flashsale/xiaolumm/templates/remind.html
@@ -31,7 +31,7 @@
 	      <button id="id_verifycode_button" class="btn btn-warning" type="button" onclick="verifycode();">立即验证</button>
 	    </span>
 	  </div>
-	  <div id="id-continue" style="text-align:center;display:none">
+	  <div id="id-continue" style="text-align:center;display:none;margin-top:20px">
 	    <a href="/m/" type="button" class="btn btn-warning">点击继续 >></a>
 	  </div>
 	</div>
