--- a/shopmanager/flashsale/pay/templates/pay/morder.html
+++ b/shopmanager/flashsale/pay/templates/pay/morder.html
@@ -1,6 +1,6 @@
 {% extends "pay/base_pay.html" %}
 
-{% block title %}小鹿美美-商品详情{% endblock %}
+{% block title %}小鹿美美-订单确认{% endblock %}
 
 {% block style %}
     <link rel="stylesheet" href="{{ STATIC_URL }}style/order.css">
