--- a/shopmanager/flashsale/pay/templates/pay/mprofile.html
+++ b/shopmanager/flashsale/pay/templates/pay/mprofile.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="{{ STATIC_URL }}style/style_other.css">
 <style style="text/css">
 
-.nav-top {background-color:#770077;}
+.nav-top {background-color:#FF7200;}
 .nav-top span{font-size:20px;}
 .nav-top p{font-size:16px;}
 .nav-top a {color:white;}
